syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.archi.common.core";
option java_outer_classname = "CoreProto";

service CoreService {
  rpc GetVouchers(GetVouchersRequest) returns(GetVouchersResponse);
}

message GetVouchersRequest {
 int64 id = 1;
}

message GetVouchersResponse {
  string message = 1;
}